# template_vue3_fastapi

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  traefik.yaml
backend/: config.py  main.py
backend/libs/: helpers.py  keycloak.py  socket.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/: silent-check-sso.html
frontend/src/: App.vue  main.js
frontend/src/plugins/: authStore.js  webSocket.js
frontend/src/router/: index.js
frontend/src/services/: api.js  keycloak.js  tokenInterceptors.js  websocket.js
frontend/src/stores/: authStore.js
frontend/src/views/: HomeView.vue
